theme de noel : correction mantis n°4655 -> alignement des listes

--- a/themes/christmas-2018-theme/custom/css/_liferay-hacks.scss
+++ b/themes/christmas-2018-theme/custom/css/_liferay-hacks.scss
@@ -106,3 +106,7 @@ h2.portlet-title-text {
     transform: translateY(97%);
   }
 }
+
+ul, ol{
+    list-style-position: inside;
+}
